# nanochain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/core/: block.cpp  block.h  hashing.cpp  hashing.h  messaging.h  netclient.cpp  netclient.h  netmessaging.cpp  netmessaging.h  peer.h  serializing.cpp  serializing.h  sign.cpp  sign.h  transaction.cpp  transaction.h
src/core/node/: main.cpp
src/miner/: main.cpp  mempool.cpp  mempool.h  miner.cpp  miner.h
src/node/: block_pool.cpp  block_pool.h  listen_server.cpp  listen_server.h  main.cpp  node.cpp  node.h  nodeconfig.cpp  nodeconfig.h  peer.h  transaction_pool.cpp  transaction_pool.h
src/wallet/: config.cpp  config.h  main.cpp  wallet.cpp  wallet.h
test/: README.md
test/blockviz/: README.md  main.py
test/blockviz/templates/: blocks.html  mempool.html  transaction.html
test/nodestub/: client.py  main.py  netops.py  server.py
test/resources/: balance_req.json  block_Test.json  blockchain_test.json  msg_new_block.json
